<resources>
    <string name="app_name">ClickOnce</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="_continue">Continue</string>
    <string name="enter_mobile_number">Enter Your Mobile Number</string>
    <string name="call">Call</string>
    <string name="search">Search</string>
    <string name="login">Login</string>
    <string name="dashboard">Dashboard</string>
    <string name="search_button">Search Button</string>
    <string name="start_icon">Start Icon</string>
    <string name="sample_mobile_number">9895204814</string>
    <string name="s1">GST Registration</string>
    <string name="s2">GST Filing</string>
    <string name="s3">Income Tax Filing</string>
    <string name="s4">Company Registration</string>
    <string name="s5">LLP Registration</string>
    <string name="s6">Project Report</string>
    <string name="s7">Trademark</string>
    <string name="s8">Partnership Deed</string>
    <string name="s9">Import Export Code</string>
    <string name="s10">FSSAI Registration</string>
    <string name="s11">Trust Registration</string>
    <string name="s12">Udhyog Aadhars</string>
    <string name="decline">No</string>
    <string name="accept">Accept</string>
</resources>
