<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:id="@+id/viewSearch"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_margin="@dimen/_16dp"
        android:background="@drawable/layout_border"
        app:layout_constraintBottom_toTopOf="@id/buttonCall"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText

            android:id="@+id/editTextSearch"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@drawable/layout_border"
            android:hint="@string/search"
            android:imeOptions="actionSearch"
            android:padding="@dimen/_16dp"
            android:singleLine="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/imageViewSearch"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/search" />

        <ImageView

            android:id="@+id/imageViewSearch"
            android:layout_width="56dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/search_button"
            android:padding="@dimen/_16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/editTextSearch"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/sharp_search_24" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.button.MaterialButton

        android:id="@+id/buttonCall"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_16dp"
        android:layout_marginTop="@dimen/_16dp"
        android:layout_marginRight="@dimen/_16dp"
        android:text="@string/call"
        android:textAllCaps="false"
        app:cornerRadius="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewSearch"
        app:strokeColor="@color/colorPrimaryDark" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/_16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonCall">

        <TableRow>

            <com.google.android.material.button.MaterialButton

                android:id="@+id/buttonS1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/_16dp"
                android:layout_marginRight="@dimen/_16dp"
                android:layout_weight="1"
                android:text="@string/s1"
                android:textAllCaps="false" />

            <com.google.android.material.button.MaterialButton

                android:id="@+id/buttonS2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/s2"
                android:textAllCaps="false" />

        </TableRow>

        <TableRow>

            <com.google.android.material.button.MaterialButton

                android:id="@+id/buttonS3"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/_16dp"
                android:layout_marginRight="@dimen/_16dp"
                android:layout_weight="1"
                android:text="@string/s3"
                android:textAllCaps="false" />

            <com.google.android.material.button.MaterialButton

                android:id="@+id/buttonS4"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/s4"
                android:textAllCaps="false" />

        </TableRow>

        <TableRow>

            <com.google.android.material.button.MaterialButton

                android:id="@+id/buttonS5"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/_16dp"
                android:layout_marginRight="@dimen/_16dp"
                android:layout_weight="1"
                android:text="@string/s5"
                android:textAllCaps="false" />

            <com.google.android.material.button.MaterialButton

                android:id="@+id/buttonS6"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/s6"
                android:textAllCaps="false" />

        </TableRow>

        <TableRow>

            <com.google.android.material.button.MaterialButton

                android:id="@+id/buttonS7"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/_16dp"
                android:layout_marginRight="@dimen/_16dp"
                android:layout_weight="1"
                android:text="@string/s7"
                android:textAllCaps="false" />

            <com.google.android.material.button.MaterialButton

                android:id="@+id/buttonS8"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/s8"
                android:textAllCaps="false" />

        </TableRow>

        <TableRow>

            <com.google.android.material.button.MaterialButton

                android:id="@+id/buttonS9"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/_16dp"
                android:layout_marginRight="@dimen/_16dp"
                android:layout_weight="1"
                android:text="@string/s9"
                android:textAllCaps="false" />

            <com.google.android.material.button.MaterialButton

                android:id="@+id/buttonS10"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:text="@string/s2"
                android:textAllCaps="false" />

        </TableRow>

        <TableRow>

            <com.google.android.material.button.MaterialButton

                android:id="@+id/buttonS11"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/_16dp"
                android:layout_marginRight="@dimen/_16dp"
                android:layout_weight="1"
                android:text="@string/s11"
                android:textAllCaps="false" />

            <com.google.android.material.button.MaterialButton

                android:id="@+id/buttonS12"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/s12"
                android:textAllCaps="false" />

        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
