<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:id="@+id/viewSearch"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_margin="@dimen/_16dp"
        android:background="@drawable/layout_border"
        app:layout_constraintBottom_toTopOf="@id/buttonCall"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText

            android:id="@+id/editTextSearch"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@drawable/layout_border"
            android:hint="@string/search"
            android:imeOptions="actionSearch"
            android:padding="@dimen/_16dp"
            android:singleLine="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/imageViewSearch"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/search" />

        <ImageView

            android:id="@+id/imageViewSearch"
            android:layout_width="56dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/search_button"
            android:padding="@dimen/_16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/editTextSearch"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/sharp_search_24" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.button.MaterialButton

        android:id="@+id/buttonCall"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_16dp"
        android:layout_marginTop="@dimen/_16dp"
        android:layout_marginRight="@dimen/_16dp"
        android:text="@string/call"
        android:textAllCaps="false"
        app:cornerRadius="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewSearch"
        app:strokeColor="@color/colorPrimaryDark" />

    <androidx.recyclerview.widget.RecyclerView

        android:id="@+id/recyclerViewServices"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/_16dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonCall"
        app:spanCount="2" />

</androidx.constraintlayout.widget.ConstraintLayout>
